WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154398
Fix behavior of reflecting unsigned long IDL attributes that are limited to only non-negative numbers greater than zero
https://bugs.webkit.org/show_bug.cgi?id=154398
Summary
Fix behavior of reflecting unsigned long IDL attributes that are limited to o...
Chris Dumez
Reported
2016-02-18 10:29:13 PST
Fix behavior of reflecting unsigned long IDL attributes that are limited to only non-negative numbers greater than zero to comply with:
https://html.spec.whatwg.org/#limited-to-only-non-negative-numbers-greater-than-zero
Attachments
Patch
(22.22 KB, patch)
2016-02-18 10:45 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-02-18 10:45:35 PST
Created
attachment 271669
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2016-02-18 10:47:01 PST
<
rdar://problem/24723411
>
Chris Dumez
Comment 3
2016-02-18 12:14:10 PST
Comment on
attachment 271669
[details]
Patch Clearing flags on attachment: 271669 Committed
r196769
: <
http://trac.webkit.org/changeset/196769
>
Chris Dumez
Comment 4
2016-02-18 12:14:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug