Source/WebCore/html/HTMLTextAreaElement.h
@@ -35,8 +35,8 @@ class HTMLTextAreaElement final : public HTMLTextFormControlElement {
 public:
     static Ref<HTMLTextAreaElement> create(const QualifiedName&, Document&, HTMLFormElement*);
 
-    int cols() const { return m_cols; }
-    int rows() const { return m_rows; }
+    unsigned cols() const { return m_cols; }
+    unsigned rows() const { return m_rows; }
 
     bool shouldWrapText() const { return m_wrap != NoWrap; }
 
@@ -57,8 +57,8 @@ public:
 
     void rendererWillBeDestroyed();
 
-    void setCols(int);
-    void setRows(int);
+    void setCols(unsigned);
+    void setRows(unsigned);
 
     virtual bool willRespondToMouseClickEvents() override;
 
@@ -118,8 +118,8 @@ private:
     bool valueMissing(const String& value) const { return isRequiredFormControl() && !isDisabledOrReadOnly() && value.isEmpty(); }
     bool tooLong(const String&, NeedsToCheckDirtyFlag) const;
 
-    int m_rows;
-    int m_cols;
+    unsigned m_rows;
+    unsigned m_cols;
     WrapMethod m_wrap;
     HTMLElement* m_placeholder;
     mutable String m_value;
